# edo

./: .gitignore  .taplo.toml  .tombi.toml  AGENTS.md  Cargo.toml  README.md  deny.toml
.agents/summary/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
.github/workflows/: rust.yml
.zed/: settings.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/cmd/: checkout.rs  list.rs  mod.rs  prune.rs  run.rs  update.rs  util.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/environment/: container.rs  local.rs  mod.rs
crates/core/src/source/: git.rs  local.rs  mod.rs  oci.rs  remote.rs  vendor.rs
crates/core/src/storage/s3/: error.rs  mod.rs  reader.rs
crates/core/src/transform/: cargo_vendor.rs  compose.rs  go_vendor.rs  import.rs  mod.rs  script.rs
crates/edo/: Cargo.toml
crates/edo-core/: Cargo.toml
crates/edo-core/src/context/: builder.rs  config.rs  error.rs  handle.rs  log.rs  logmgr.rs  mod.rs  node.rs  schema.rs  starlark.rs
crates/edo-core/src/environment/: command.rs  error.rs  farm.rs  mod.rs
crates/edo-core/src/plugin/: bindings.rs  host.rs  mod.rs
crates/edo-core/src/plugin/impl_/: environment.rs
crates/edo-core/src/scheduler/: execute.rs
crates/edo-core/src/source/: error.rs  mod.rs  resolver.rs
crates/edo-core/src/storage/: backend.rs  mod.rs
crates/edo-core/src/util/: reader.rs
crates/edo/src/: lib.rs  main.rs
crates/edo/src/cmd/: mod.rs
crates/edo/src/console/: event.rs  mod.rs  render.rs  sinks.rs  state.rs
crates/edo/src/context/: address.rs  builder.rs  config.rs  element.rs  error.rs  handle.rs  lock.rs  log.rs  logmgr.rs  mod.rs  node.rs  registry.rs  schema.rs
crates/edo/src/environment/: command.rs  error.rs  farm.rs  mod.rs  vfs.rs
crates/edo/src/scheduler/: error.rs  execute.rs  graph.rs  mod.rs  node.rs
crates/edo/src/source/: error.rs  mod.rs  require.rs  resolver.rs  vendor.rs  version.rs
crates/edo/src/storage/: artifact.rs  backend.rs  catalog.rs  error.rs  id.rs  local.rs  mod.rs
crates/edo/src/transform/: mod.rs
crates/edo/src/tui/: event.rs  mod.rs  state.rs  ui.rs
crates/edo/src/util/: command.rs  fs.rs  mod.rs  reader.rs  sync.rs  writer.rs
crates/plugins/edo-core-plugin/src/: lib.rs
crates/plugins/edo-core-plugin/src/environment/: container.rs  local.rs
crates/plugins/edo-core-plugin/src/source/: git.rs  local.rs  oci.rs  remote.rs  vendor.rs
crates/plugins/edo-core-plugin/src/storage/s3/: mod.rs
crates/plugins/edo-core-plugin/src/transform/: compose.rs  import.rs  script.rs
docs/: design.md  requirements.md
docs/components/: environment.md  plugin.md  source.md  storage.md  transform.md
examples/hello_oci/: edo.toml
examples/hello_rust/: edo.toml
tests/: Cargo.toml
tests/error_fixtures/bad_toml/: edo.toml
tests/error_fixtures/unresolved_source/: edo.toml
tests/fixtures/: README.md  edo.toml
tests/fixtures/cross_project_consumer/: edo.toml
tests/fixtures/hello_compose/: edo.toml
tests/fixtures/hello_compose/left/: left.txt
tests/fixtures/hello_compose/right/: right.txt
tests/fixtures/hello_local/: edo.toml
tests/fixtures/hello_local/files/: greeting.txt
tests/fixtures/hello_script/: edo.toml
tests/fixtures/hello_script/files/: make_hello.sh
tests/net_fixtures/go_src/: edo.toml  go.mod
tests/net_fixtures/net_container_script/: edo.toml
tests/net_fixtures/net_container_script/code/: hello.c
tests/net_fixtures/net_git/: edo.toml
tests/net_fixtures/net_remote/: edo.toml
tests/net_fixtures/rust_src/: Cargo.toml  edo.toml
tests/net_fixtures/rust_src/src/: main.rs
tests/src/common/: catalog.rs  fixtures.rs  mod.rs  network.rs
tests/tests/: checkout.rs  console_events.rs  errors.rs  list.rs  network.rs  prune.rs  run.rs  umbrella.rs  update_and_lock.rs
