[workspace]
default-members = ["crates/cli"]
exclude         = [".edo/", "examples/"]
members         = ["crates/cli", "crates/edo", "crates/core"]
resolver        = "2"

[workspace.dependencies]
arc-handle           = "1.0"
astral-tokio-tar     = "0.6"
async-compression    = { version = "0.4", features = ["tokio", "zstd", "gzip", "bzip2", "lzma", "xz"] }
async-recursion      = "1.1"
async-trait          = "0.1"
aws-config           = "1"
aws-credential-types = "1"
aws-sdk-ecr          = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ecrpublic    = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-s3           = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
base16               = "0.2"
base64               = "0.22"
bimap                = "0.6"
blake3               = "1.8"
bon                  = "3.9"
bytes                = "1.11"
cfg-if               = "1.0"
chrono               = { version = "0.4", features = ["serde"] }
clap                 = { version = "4.6", features = ["derive"] }
daggy                = "0.9"
dashmap              = { version = "6.1", features = ["serde"] }
dialoguer            = "0.12"
duct                 = "1"
futures              = "0.3"
futures-util         = "0.3"
handlebars           = "6.4"
home                 = "0.5"
indexmap             = "2.14"
indicatif            = "0.18"
keyring              = "3.6"
merkle_hash          = "3.8"
names                = { version = "0.14", features = [], default-features = false }
ocilot               = "0.1"
os_pipe              = "1.2"
owo-colors           = { version = "4.3", features = ["supports-colors"] }
parking_lot          = { version = "0.12", features = ["send_guard"] }
rand                 = "0.10"
rayon                = "1.12"
regex                = "1.12"
reqwest              = { version = "0.13", features = ["json", "stream"], default-features = false }
resolvo              = { version = "0.10", features = ["serde", "tokio", "version-ranges"] }
semver               = { version = "1.0", features = ["serde"] }
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
serial_test          = "3"
sha2                 = "0.11"
snafu                = "0.9"
tempfile             = "3.27"
tokio                = { version = "1.52", features = ["full", "rt-multi-thread", "parking_lot"] }
tokio-util           = "0.7"
toml                 = "1"
tracing              = "0.1"
tracing-indicatif    = { version = "0.3" }
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
url                  = "2.5"
uuid                 = { version = "1", features = ["v7"] }
which                = "8"
