[package]
name    = "edo-integration-tests"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
assert_cmd  = { workspace = true }
predicates  = { workspace = true }
serial_test = { workspace = true }
tempfile    = { workspace = true }
tokio       = { workspace = true }
which       = { workspace = true }

[dev-dependencies]
assert_cmd  = { workspace = true }
edo-cli     = { path = "../crates/cli" }
predicates  = { workspace = true }
serde_json  = { workspace = true }
serial_test = { workspace = true }
tempfile    = { workspace = true }
tokio       = { workspace = true }
which       = { workspace = true }
