[package]
edition = "2024"
license = "MIT OR Apache-2.0"
name    = "edo-core"
version = "0.1.0"

[dependencies]
astral-tokio-tar  = { workspace = true }
async-trait       = { workspace = true }
aws-config        = { workspace = true }
aws-sdk-s3        = { workspace = true }
base16            = { workspace = true }
blake3            = { workspace = true }
dashmap           = { workspace = true }
edo               = { path = "../edo" }
futures           = { workspace = true }
indexmap          = { workspace = true }
indicatif         = { workspace = true }
merkle_hash       = { workspace = true }
names             = { workspace = true }
ocilot            = { workspace = true }
reqwest           = { workspace = true }
semver            = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
snafu             = { workspace = true }
tempfile          = { workspace = true }
tokio             = { workspace = true }
tokio-util        = { workspace = true }
tracing           = { workspace = true }
tracing-indicatif = { workspace = true }
url               = { workspace = true }
uuid              = { workspace = true }
which             = { workspace = true }
