[package]
name = "edo-core"
version = "0.1.0"
edition = "2024"
authors = ["Jarrett Tierney <jmt@amazon.com>"]
repository = "https://github.com/awslabs/edo"
license = "MIT OR Apache-2.0"
keywords = ["edo"]

[dependencies]
arc-handle         = { workspace = true }
astral-tokio-tar   = { workspace = true }
async-recursion    = { workspace = true }
async-trait        = { workspace = true }
aws-config         = { workspace = true }
aws-sdk-s3         = { workspace = true }
base16             = { workspace = true }
bimap              = { workspace = true }
blake3             = { workspace = true }
chrono             = { workspace = true }
daggy              = { workspace = true }
dashmap            = { workspace = true }
derive_builder     = { workspace = true }
dialoguer          = { workspace = true }
duct               = { workspace = true }
futures            = { workspace = true }
handlebars         = { workspace = true }
home               = { workspace = true }
indicatif          = { workspace = true }
indexmap           = { workspace = true }
merkle_hash        = { workspace = true }
names              = { workspace = true }
ocilot             = { workspace = true }
owo-colors         = { workspace = true }
os_pipe            = { workspace = true }
parking_lot        = { workspace = true }
rand               = { workspace = true }
regex              = { workspace = true }
resolvo            = { workspace = true }
reqwest            = { workspace = true }
semver             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
snafu              = { workspace = true }
tempfile           = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-indicatif  = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }
url                = { workspace = true }
which              = { workspace = true }
