[package]
authors    = ["Jarrett Tierney <jmt@amazon.com>"]
edition    = "2024"
keywords   = ["edo"]
license    = "MIT OR Apache-2.0"
name       = "edo"
repository = "https://github.com/awslabs/edo"
version    = "0.1.0"

[dependencies]
arc-handle         = { workspace = true }
astral-tokio-tar   = { workspace = true }
async-compression  = { workspace = true }
async-recursion    = { workspace = true }
async-trait        = { workspace = true }
aws-config         = { workspace = true }
aws-sdk-s3         = { workspace = true }
base16             = { workspace = true }
bimap              = { workspace = true }
blake3             = { workspace = true }
bon                = { workspace = true }
crossterm          = { workspace = true }
daggy              = { workspace = true }
dashmap            = { workspace = true }
duct               = { workspace = true }
futures            = { workspace = true }
handlebars         = { workspace = true }
home               = { workspace = true }
indexmap           = { workspace = true }
merkle_hash        = { workspace = true }
names              = { workspace = true }
ocilot             = { workspace = true }
os_pipe            = { workspace = true }
parking_lot        = { workspace = true }
rand               = { workspace = true }
ratatui            = { workspace = true }
regex              = { workspace = true }
reqwest            = { workspace = true }
resolvo            = { workspace = true }
schemars           = { workspace = true, features = ["semver1"] }
semver             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
snafu              = { workspace = true }
tempfile           = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-appender   = { workspace = true }
tracing-subscriber = { workspace = true }
url                = { workspace = true }
uuid               = { workspace = true }
which              = { workspace = true }

[dev-dependencies]
mockall     = { workspace = true }
serial_test = { workspace = true }
